- Fix overflow problems

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,13 +93,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .container {
 
   position: relative;
 
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   background-color: var(--white-bg);
   box-shadow: 0 0 10px var(--white-bg);
